# distant-frames

./: .gitignore  CONTRIBUTING.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  debug_import.py  generate_test_video.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
distant_frames/: __init__.py  cli.py  core.py
