[project]
name = "distant-frames"
version = "0.1.1"
description = "Smart video frame extraction tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Yubraj Sigdel", email = "yubrajsigdel1@gmail.com"}
]
keywords = ["video", "frame-extraction", "opencv", "deduplication", "video-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "opencv-python>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/yubraaj11/distant-frames"
Repository = "https://github.com/yubraaj11/distant-frames"
Issues = "https://github.com/yubraaj11/distant-frames/issues"

[project.scripts]
distant-frames = "distant_frames.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"





